corrected overlap issue

--- a/src/components/login.css
+++ b/src/components/login.css
@@ -13,11 +13,11 @@
     display: flex;
    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-evenly;
      
 }
 .logo{
-    color:teal;
+    color: rgb(84, 206, 206);
     display:flex;
     align-items: center;
     font-weight: 700;
@@ -27,7 +27,7 @@
     padding: 5px;
     border-radius: 5px;
     color: white;
-    background-color: teal;
+    background-color:  rgb(84, 206, 206);
 }
 .success{
     color:green;
@@ -45,3 +45,34 @@
     right: 5px;
     cursor:pointer;
 }
+form {
+    width: 240px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    color: rgb(88, 87, 87);
+  }
+  
+  input {
+    border: none;
+    border-bottom: 1px solid gray;
+  }
+  
+  input::placeholder,
+  textarea::placeholder {
+    font-size: 12px;
+    color: rgb(185, 184, 184);
+  }
+  
+  input:focus,
+  textarea:focus,
+  select:focus {
+    outline: none;
+  }
+  
+  textarea {
+    border: none;
+    border-bottom: 1px solid gray;
+  }
+  
