--- a/src/components/register.css
+++ b/src/components/register.css
@@ -17,7 +17,7 @@
      
 }
 .logo{
-    color:skyblue;
+    color: rgb(84, 206, 206);
     display:flex;
     align-items: center;
     font-weight: 700;
@@ -27,7 +27,7 @@
     padding: 5px;
     border-radius: 5px;
     color: white;
-    background-color: skyblue;
+    background-color: rgb(84, 206, 206);
 }
 .success{
     color:green;
@@ -44,4 +44,36 @@
     top: 5px;
     right: 5px;
     cursor:pointer;
+    
 }
+form {
+    width: 240px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    color: rgb(88, 87, 87);
+  }
+  
+  input {
+    border: none;
+    border-bottom: 1px solid gray;
+  }
+  
+  input::placeholder,
+  textarea::placeholder {
+    font-size: 12px;
+    color: rgb(185, 184, 184);
+  }
+  
+  input:focus,
+  textarea:focus,
+  select:focus {
+    outline: none;
+  }
+  
+  textarea {
+    border: none;
+    border-bottom: 1px solid gray;
+  }
+  
